# GoblinAI

./: .gitignore  .style.yapf  README.md  __main__.py  goblinai.py  install.sh  main.py  package-lock.json  pyproject.toml  settings.json
client/: __init__.py  bun.lockb  package-lock.json  package.json  postcss.config.js  vite.config.ts
client/src/: App.tsx  index.css  index.tsx
client/src/components/: Button.module.css  Button.tsx  Container.module.css  Container.tsx  DevModeIndicator.tsx  Dialog.module.css  Dialog.tsx  Loader.tsx  Message.tsx  Navbar.module.css  Navbar.tsx  NewStoryButton.module.css  NewStoryButton.tsx  Page.tsx  StoryList.module.css  StoryList.tsx  StoryListItem.module.css  StoryListItem.tsx  TextArea.module.css  TextArea.tsx  TextField.module.css  TextField.tsx  ThemeSelect.module.css  ThemeSelect.tsx  Toolbar.tsx
client/src/hooks/: useAPI.ts  useAPIRequest.ts  useDeleteStory.ts  useDocumentTitle.ts  useGenerateMessage.ts  useStories.ts
client/src/layouts/: Layout.tsx
client/src/types/: Message.ts  Story.ts
client/src/views/: DashboardView.module.css  DashboardView.tsx  HomeView.tsx  SettingsView.tsx  StoryView.module.css  StoryView.tsx
goblinai/: __init__.py  __main__.py
goblinai/client/: .env.example  .gitignore  bun.lockb  index.html  package.json  postcss.config.js  vite.config.ts
goblinai/client/src/: App.tsx  index.css
goblinai/server/: SPAStaticFiles.py  __init__.py  utils.py
goblinai/server/model/: Message.py  (+4 more)
server/: SPAStaticFiles.py  __init__.py
server/api/: stories.py
server/model/: Message.py  Story.py  story.py
(+81 files in other folders)
