[tool.poetry]
name = "goblinai"
version = "0.1.0"
description = ""
authors = ["Mafrans <malte.kluft@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.33.0"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
ngrok = "^0.9.0"
watchfiles = "^0.20.0"
argcomplete = "^3.1.1"
faker = "^19.6.1"
shortuuid = "^1.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
